# MarkdownViewer

./: README.md  package-lock.json  package.json  project_readme.md  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: main.rs
src/lib/: MarkdownViewer.svelte
